--- a/GarageManagement/appsettings.json
+++ b/GarageManagement/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-SHCJAFE;Database=Garage;Trusted_Connection=True;",
+    "DefaultConnection": "Server=DESKTOP-SHCJAFE;Database=Garage;Trusted_Connection=True;TrustServerCertificate=True;",
     "GarageDbContext": "Server=(localdb)\\mssqllocaldb;Database=GarageDbContext-97691e9a-5e7b-4a79-8b94-61000289915a;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
