--- a/GarageManagement/appsettings.json
+++ b/GarageManagement/appsettings.json
@@ -1,13 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        //"DefaultConnection": "Server=DESKTOP-SHCJAFE;Database=Garage;Trusted_Connection=True;",
+        "GarageDbContext": "Server=(localdb)\\mssqllocaldb;Database=GarageDbContext-97691e9a-5e7b-4a79-8b94-61000289915a;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "GarageManagementContextConnection": "Server=(localdb)\\mssqllocaldb;Database=GarageManagement;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "PostgresConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=postgres"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-SHCJAFE;Database=Garage;Trusted_Connection=True;",
-    "GarageDbContext": "Server=(localdb)\\mssqllocaldb;Database=GarageDbContext-97691e9a-5e7b-4a79-8b94-61000289915a;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
 }
