Finish conenct DB

--- a/GarageManagement/appsettings.json
+++ b/GarageManagement/appsettings.json
@@ -1,13 +1,12 @@
 {
+  "ConnectionStrings": {
+    "GarageDbContext": "Server=DESKTOP-SHCJAFE;Database=Garage;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-SHCJAFE;Database=Garage;Trusted_Connection=True;TrustServerCertificate=True;",
-    "GarageDbContext": "Server=(localdb)\\mssqllocaldb;Database=GarageDbContext-97691e9a-5e7b-4a79-8b94-61000289915a;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  "AllowedHosts": "*"
 }
