fully working auth

--- a/GarageManagement/appsettings.Development.json
+++ b/GarageManagement/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "GarageDbContext": "Server=LAPTOP-9QENFRBF;Database=Garage;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "Microsoft.AspNetCore": "Debug"
+        }
     }
-  }
 }
