--- a/GarageManagement/appsettings.Development.json
+++ b/GarageManagement/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "GarageDbContext": "Server=LAPTOP-9QENFRBF;Database=Garage;Trusted_Connection=True;TrustServerCertificate=True"
+    "GarageDbContext": "Server=DESKTOP-SHCJAFE;Database=Garage;Trusted_Connection=True;TrustServerCertificate=True"
   },
     "Logging": {
         "LogLevel": {
