--- a/GarageManagement/appsettings.json
+++ b/GarageManagement/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "GarageDbContext": "Server=LAPTOP-9QENFRBF;Database=Garage;Trusted_Connection=True;TrustServerCertificate=True"
+    "GarageDbContext": "Server=DESKTOP-SHCJAFE;Database=Garage;Trusted_Connection=True;TrustServerCertificate=True;"
   },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
 }
